--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"description": "Website for NMIMS, Navi Mumbai TechFest IGNITE 3.0",
+	"description": "IGNITE 3.0 TechFest website for NMIMS, Navi Mumbai",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -13,7 +13,7 @@
 		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.2.6",
+		"autoprefixer": "^10.4.0",
 		"postcss": "^8.3.5",
 		"tailwindcss": "^2.2.4"
 	}
