--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
 	},
 	"dependencies": {
 		"firebase": "^9.4.1",
-		"react-firebase-hooks": "^4.0.1",
 		"framer-motion": "^5.3.0",
+		"moment": "^2.29.1",
 		"next": "^12.0.3",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-firebase-hooks": "^4.0.1",
+		"sass": "^1.44.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
