--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"description": "IGNITE 3.0 TechFest website for NMIMS, Navi Mumbai",
+	"description": "IGNITE 4.0 TechFest website for NMIMS, Navi Mumbai",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -7,15 +7,17 @@
 	},
 	"dependencies": {
 		"firebase": "^9.4.1",
-		"react-firebase-hooks": "^4.0.1",
 		"framer-motion": "^5.3.0",
+		"moment": "^2.29.1",
 		"next": "^12.0.3",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"sass": "^1.44.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
-		"postcss": "^8.3.5",
-		"tailwindcss": "^2.2.4"
+		"postcss": "^8.4.4",
+		"tailwindcss": "^3.0.0"
 	}
 }
