--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"sass": "^1.44.0"
+		"sass": "^1.44.0",
+		"swup": "^2.0.14"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
